--- a/pagjogos.css
+++ b/pagjogos.css
@@ -1,17 +1,11 @@
 body{
-  background-color: white;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  transition: all 0.3s ease;
+    background-color: white;
 }
-.header-card{
-  background: linear-gradient(135deg, #6e8efb, #a777e3);
-  color: white;
-  text-align: center;
-  border-radius: 15px;
-  padding: 25px;
-  margin-bottom: 30px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  margin-top: 2vh;
+header{
+    color: white;
+    background: linear-gradient(to bottom, #6783e0, #9c6dd4); 
+    text-align: center;
+    padding: 5vh;
 }
 .card{
     margin-top: 5vh;
@@ -67,3 +61,4 @@ footer{
     background: linear-gradient(to bottom, #6e8efb, #917fe9)
 
 }
+
